AB-193 : MAC+Safari UI issue - Address and resource are not visible.

--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -11,7 +11,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  max-height: 100%;
+  height: 53vh;
 }
 
 .qm-dashboard-col-9 {
